--- a/css.css
+++ b/css.css
@@ -1,10 +1,10 @@
-﻿html {
+html {
     height: 100%;
 }
 
 :root {
     --item-count: 6;
-    --item: 1 / var(--item-count);
+    --item: calc(1 / var(--item-count));
 }
 
 body {
