--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
     font-size: 18px;
     letter-spacing: 0.02em;
     text-transform: uppercase;
+    background-color: green;
 }
 
 .box {
