--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html {
 
 body {
     height: 100%;
-    display: flex;
+    display: block;
     font-size: 18px;
     letter-spacing: 0.02em;
     text-transform: uppercase;
@@ -28,7 +28,7 @@ body {
         z-index: 1;
         width: 100%;
         content: '';
-        height: 0px;
+        height: 100px;
         position: absolute;
     }
 
@@ -38,7 +38,7 @@ body {
         z-index: 1;
         width: 100%;
         content: '';
-        height: 0px;
+        height: 100px;
         position: absolute;
     }
 
