--- a/style.css
+++ b/style.css
@@ -2,11 +2,6 @@ html {
     height: 100%;
 }
 
-:root {
-    --item-count: 6;
-    --item: calc(1 / var(--item-count));
-}
-
 body {
     height: 100%;
     display: block;
@@ -45,7 +40,7 @@ body {
 ul {
     padding-right: 50px;
     padding-left: 50px;
-    animation: scrollUp 25s infinite forwards;
+    animation: scrollUp 20s infinite forwards;
     animation-timing-function: linear;
     height: 13100px;
     list-style-type: none;
@@ -57,6 +52,6 @@ ul {
     }
 
     to {
-        transform: translateY(calc((-100% / var(--item-count)) * (var(--item-count) - 1)));
+        transform: translateY(13100px);
     }
 }
