--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 
 .box {
     top: 0;
+    bottom: 0;
     height: 100%;
     margin: none;
     overflow: hidden;
@@ -24,7 +25,6 @@ body {
         z-index: 1;
         width: 100%;
         content: '';
-        height: 0px;
         position: absolute;
     }
 
