--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
 
 body {
 	height: 100%;
-	width: 100;
+	width: 100%;
 	top: 0;
 	left: 0;
 	display: block;
@@ -15,9 +15,10 @@ body {
 
 .box {
 	height: 100%;
-	top: 0;
+	top: 20px;
 	left: 0;
 	margin: none;
+	padding: none;
 	overflow: hidden;
 	position: absolute;
 }
