--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
 
 body {
 	height: 100%;
-	width: 100%;
+	width: 100vw;
 	top: 0;
 	left: 0;
 	display: block;
@@ -13,6 +13,7 @@ body {
 	text-transform: uppercase;
 	margin: none;
 	padding: none;
+	position: absolute;
 }
 
 .box {
