--- a/style.css
+++ b/style.css
@@ -17,11 +17,13 @@ body {
 }
 
 .box {
-	height: calc(100% + 20px);
+	position: absolute;
+    	top: 50%;
+	left: 50%;
+    	margin-right: -50%;
+    	transform: translate(-50%, -50%);
+	height: calc(100% - 20px);
 	width: 80%;
-	top: 0;
-	left: 0;
-	margin: none;
 	padding: none;
 	overflow: hidden;
 	position: absolute;
@@ -48,7 +50,12 @@ body {
 }
 
 ul {
-	margin: none;
+	position: absolute;
+    	top: 50%;
+	left: 50%;
+    	margin-right: -50%;
+    	transform: translate(-50%, -50%);
+	width: 100%;
 	padding-top: none;
 	padding-bottom: none;
 	padding-right: 50px;
@@ -56,7 +63,6 @@ ul {
 	animation: scrollUp 200s infinite forwards;
 	animation-timing-function: linear;
 	height: 13100px;
-	width: 80%;
 	list-style-type: none;
 }
 
