--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
 	width: 100vw;
 	top: 0;
 	left: 0;
+	margin-right: 0;
+	margin-left: 0;
+	margin-top: 0;
+	margin-bottom 0;
 	display: block;
 	font-size: 18px;
 	letter-spacing: 0.02em;
@@ -21,9 +25,12 @@ body {
     	top: 50%;
 	left: 50%;
     	margin-right: -50%;
+	margin-left: 0;
+	margin-top: 0;
+	margin-bottom 0;
     	transform: translate(-50%, -50%);
-	height: calc(100% - 20px);
-	width: 80%;
+	height: calc(100% + 20px);
+	width: 100%;
 	padding: none;
 	overflow: hidden;
 	position: absolute;
@@ -54,6 +61,9 @@ ul {
     	top: 50%;
 	left: 50%;
     	margin-right: -50%;
+	margin-left: 0;
+	margin-top: 0;
+	margin-bottom 0;
     	transform: translate(-50%, -50%);
 	width: 100%;
 	padding-top: none;
