--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
 	margin: none;
 	padding: none;
 	position: relative;
+	box-sizing: border-box;
 }
 
 .box {
@@ -32,6 +33,7 @@ body {
 	padding: none;
 	overflow: hidden;
 	position: absolute;
+	box-sizing: border-box;
 }
 
 .box::before {
@@ -72,6 +74,7 @@ ul {
 	animation-timing-function: linear;
 	height: 13100px;
 	list-style-type: none;
+	box-sizing: border-box;
 }
 
 @keyframes scrollUp {
