--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
 	margin: none;
-	height: 100%;
-	width: 100%;
+	height: 100vh;
+	width: 100vw;
 	left: 0;
 	top: 0;
 }
@@ -12,6 +12,7 @@ body {
 	letter-spacing: 0.02em;
 	text-transform: uppercase;
   	height: 100%;
+	width: 100%;
   	overflow: hidden;
 }
 
